tests/ui/errors/invalid_directive.stderr
error: unknown directive
 --> tests/ui/errors/invalid_directive.rs:5:13
  |
5 |         div something:yes="b" {}
  |             ^^^^^^^^^

error: expected a kebab-cased ident
  --> tests/ui/errors/invalid_directive.rs:11:19
   |
11 |         div class:("abcd") = true {}
   |                   ^

error: expected a kebab-cased ident
  --> tests/ui/errors/invalid_directive.rs:17:19
   |
17 |         div style:[1, 2]="black" {}
   |                   ^

error[E0425]: cannot find value `clicky_click` in module `leptos::ev`
  --> tests/ui/errors/invalid_directive.rs:23:19
   |
23 |         button on:clicky-click={move |_| ()};
   |                   ^^^^^^^^^^^^ not found in `leptos::ev`
